--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -40,7 +40,7 @@ header {
 }
 
 .mission {
-    width: 1200px;
+    max-width: 1200px;
     height: auto;
     margin-left: auto;
     margin-right: auto;
@@ -48,17 +48,17 @@ header {
 }
 
 .mission .background-img {
-    display: block;
     max-width: 100%;
     height: 700px;
+    width: auto;
+    overflow: hidden;
 }
 
 .mission-foreground {
     align-items: center;
-    background-color: black;
     width: 100%;
-    height: 14.28%;
     top: 45%;
+    height: 14.28%;
     position: absolute;
     text-align: center;
 }
@@ -67,10 +67,12 @@ header {
     text-align: center;
     padding: 0.6rem;
     line-height: 2.5rem;
+    overflow-wrap: normal;
+    background-color: black;
 }
 
 .featured {
-    width: 1000px;
+    max-width: 1000px;
     margin-top: 40px;
     justify-content: center;
     margin-left: auto;
@@ -100,7 +102,7 @@ header {
 }
 
 .locations {
-    width: 1200px;
+    max-width: 1200px;
     height: auto;
     margin-top: 40px;
     margin-left: auto;
@@ -129,9 +131,11 @@ header {
 }
 
 .location-places-container {
-    display: flex;
+    display: inline-flex;
     width: 100%;
     justify-content: space-around;
+    flex-wrap: wrap;
+    flex-direction: row;
 }
 
 .downtown, .east-bayside, .oakdale {
